css/style.css
:root {
  /*---------------------------------------------*/
  /*//////////////////////////////////////////////////////////////////
    [ PRIMARY COLOR ]*/
  --Dark-Blue: hsl(233, 26%, 24%);
  --Lime-Green: hsl(136, 65%, 51%);
  --Bright-Cyan: hsl(192, 70%, 51%);
  /*//////////////////////////////////////////////////////////////////
    [ Neutral COLOR ]*/
  --Grayish-Blue: hsl(233, 8%, 62%);
  --Light-Grayish-Blue: hsl(220, 16%, 96%);
  --Very-Light-Gray: hsl(0, 0%, 98%);
  --White: hsl(0, 0%, 100%);
}

html {
  font-size: 100%;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Public Sans", sans-serif;
  font-weight: 300;
  font-size: 1.125rem;
  line-height: 1.3;
  background-color: var(--Light-Grayish-Blue);
  overflow-x: hidden;
}

body.scroll-lock {
  overflow: hidden;
}

a,
a:visited,
a:hover {
  text-decoration: none;
}

ul {
  list-style: none;
}

header {
  background-color: var(--White);
}

header nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 24px;
  height: 5rem;
  max-width: 70rem;
  margin: 0 auto;
}

.container {
  max-width: 70rem;
  margin: 0 auto;
}

.paddingL-R {
  padding: 0 24px;
}

.logo__container {
  line-height: 0;
}

.logo__container img {
  width: 8.8125rem;
  height: 1.375rem;
}

.hamburger__menu {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu__icon {
  background-color: var(--Dark-Blue);
  width: 1.6rem;
  height: 3px;
  border-radius: 3px;
}

.menu__icon.open {
  background-color: transparent;
}

.menu__icon.open::before {
  transform: translateX(0) rotate(-45deg);
}

.menu__icon.open::after {
  transform: translateX(0) rotate(45deg);
}

.menu__icon::before,
.menu__icon::after {
  content: "";
  position: absolute;
  border-radius: 3px;
  width: inherit;
  height: inherit;
  background-color: var(--Dark-Blue);
  transition: 0.5s;
}

.menu__icon::before {
  transform: translateY(-7px);
}

.menu__icon::after {
  transform: translateY(7px);
}

.nav_links {
  visibility: hidden;
  position: absolute;
  top: 6.5rem;
  left: 50%;
  transform: translateX(-50%);
  width: calc(100% - 48px);
  border-radius: 10px;
  background-color: var(--White);
  animation: fade-out 300ms ease-in-out forwards;
  z-index: 5;
}

.nav_links.open {
  visibility: visible;
  animation: fade-in 300ms ease-in-out forwards;
}

.nav_links ul {
  display: flex;
  flex-direction: column;
  padding: 30px 0px;
  align-items: center;
}

.nav_link > a {
  font-size: 1rem;
  font-weight: 600;
  color: var(--Grayish-Blue);
}

.nav_link > a:hover {
  color: var(--Dark-Blue);
}

.nav_link:not(:first-child) {
  margin-top: 30px;
}

.btn {
  border: none;
  outline: none;
  padding: 14px 35px;
  border-radius: 50px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 400;
  display: inline-block;
}

.cta_btn {
  background: linear-gradient(to right, var(--Lime-Green), var(--Bright-Cyan));
  color: #fff;
  transition: all 300ms ease-in-out;
}

.cta_btn:hover {
  opacity: 0.75;
}

.overlay {
  visibility: hidden;
  position: absolute;
  top: 5rem;
  left: 0;
  width: 100%;
  height: calc(100vh - 5rem);
  background: linear-gradient(to bottom, var(--Dark-Blue), transparent);
  opacity: 0;
  animation: fade-out 300ms ease-in-out forwards;
  z-index: 4;
}

.overlay.open {
  visibility: visible;
  animation: fade-in 300ms ease-in-out forwards;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade-out {
  from {
    visibility: visible;
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

.hero {
  background-color: var(--Very-Light-Gray);
}

.hero-img {
  position: relative;
  background: url("../img/bg-intro-mobile.svg") no-repeat center / cover;
  min-height: 17.5rem;
}

.hero-img::before,
.hero-img::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
}

.hero-img::before {
  background: url("../img/image-mockups.png") no-repeat center bottom;
  background-size: 86%;
}

.hero-info {
  padding: 2.25rem 1.5rem;
  text-align: center;
}

.hero-info h1 {
  color: var(--Dark-Blue);
  font-size: 2.4rem;
  font-weight: 300;
}

.hero-info p,
.features p {
  padding-top: 1.5rem;
  padding-bottom: 2.1875rem;
  color: var(--Grayish-Blue);
  font-size: 16px;
}

.feature-heading p {
  padding-bottom: 0;
}

.features {
  text-align: center;
  padding-top: 90px;
}

.features h2,
.article h2 {
  font-size: 30px;
  font-weight: 300;
  color: var(--Dark-Blue);
}

.features p br {
  display: none;
}

.feature-icon {
  width: 75px;
  margin: 0 auto;
  padding-bottom: 30px;
}

.feature-icon img {
  width: 100%;
}

.feature-body h3,
.article-title h3 {
  font-weight: 300;
  color: var(--Dark-Blue);
  font-size: 24px;
}

.feature-heading {
  padding-bottom: 60px;
}

.article {
  background-color: var(--Very-Light-Gray);
  padding-bottom: 90px;
}

.article h2 {
  padding: 90px 0 40px 0;
}

.article-card {
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 25px;
}

.article-body {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  overflow: hidden;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}

.article-img {
  height: 200px;
}

.article img {
  width: 100%;
  height: 100%;
  display: block;
}

.article-author p {
  font-size: 12px;
}

.article-info {
  padding: 30px 25px;
  background-color: var(--White);
}

.article-title h3 {
  font-size: 18px;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.article-author,
.article-description {
  font-size: 12px;
  line-height: 1.6;
  color: var(--Grayish-Blue);
}

.article-title a:hover h3 {
  color: var(--Lime-Green);
}

footer {
  background-color: var(--Dark-Blue);
  text-align: center;
}

.footer-container {
  padding: 40px 0px;
  font-size: 15px;
}


.footer-left a {
  color: var(--Light-Grayish-Blue);
}

.footer-right p {
  color: var(--Grayish-Blue);
}

.social-media ul {
  display: flex;
  column-gap: 1rem;
  justify-content: center;
}

.social-media img {
  display: block;
  width: 25px;
  height: auto;
  transition: all 150ms ease-in-out;
}

.footer-nav-link {
  padding-top: 20px;
}

.social-media {
  padding: 30px 0 20px 0;
}

.footer_cta {
  margin: 30px 0;
}

.footer-nav-links a:hover {
  color: var(--Lime-Green);
}

.social-media img:hover {
  filter: invert(64%) sepia(59%) saturate(563%) hue-rotate(83deg)
    brightness(160%) contrast(90%);
}

